# src/main/java/com/example/bankcards/dto/UserResponseDto.java
@@ -1,0 +1,4 @@
+package com.example.bankcards.dto;
+
+public record UserResponseDto(String phoneNumber, String name, String surname) {
+}
